# dogear

./: .gitignore  .travis.yml  Cargo.toml  README.md  application.html  divergences.html  index.html  integration.html  matching.html  merging.html  print.html  rustfmt.toml  searchindex.js  searchindex.json  trees.html
.github/workflows/: build.yml
.travis/: after_success.sh  before_install.sh  install.sh
docs/: README.md  SUMMARY.md  application.md  divergences.md  integration.md  matching.md  merging.md  trees.md
src/: driver.rs  error.rs  guid.rs  lib.rs  merge.rs  store.rs  tests.rs  tree.rs
