[package]
name = "dogear"
description = "A library for merging bookmark trees."
version = "0.1.1"
repository = "https://github.com/linacambridge/dogear"
authors = ["Lina Cambridge <lina@mozilla.com>"]
license = "Apache-2.0"
exclude = [".travis", ".travis.yml"]

[dependencies]
log = "0.4"

[dev-dependencies]
base64 = "0.10"
env_logger = "0.5.6"
rand = "0.6"
