[package]
name = "dogear"
description = "A library for merging bookmark trees."
version = "0.1.1"
repository = "https://github.com/linacambridge/dogear"
authors = ["Lina Cambridge <lina@mozilla.com>"]
license = "Apache-2.0"
exclude = [".travis", ".travis.yml"]
edition = "2018"

[dependencies]
smallbitvec = "2.3.0"
