[package]
name = "dogear"
description = "A library for merging bookmark trees."
version = "0.2.1"
repository = "https://github.com/mozilla/dogear"
authors = ["Lina Cambridge <lina@mozilla.com>"]
license = "Apache-2.0"
exclude = ["/.travis/**", ".travis.yml"]
edition = "2018"

[dependencies]
smallbitvec = "2.3.0"
